# Spaceships

./: .gitignore  AdjacencyListGraph.cpp  AdjacencyListGraph.h  BlueprintEditorAppearance.cpp  BlueprintEditorAppearance.h  BlueprintTilePainter.cpp  BlueprintTilePainter.h  BoxEntity.h  CMakeLists.txt  Camera.h  CameraTransformations.h  CardinalDirections.h  CargoContainer.cpp  CargoContainer.h  CirclePhysicsEntity.h  ConnectRoomGraph.h  Cursor.h  DebugGrid.h  Entity.h  FreeCamera.h  GUI.h  GUIList.cpp  GUIList.h  GUIRect.h  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  MenuNavigation.h  Physics.cpp  Physics.h  PhysicsEntity.h  Player.cpp  Player.h  RayCaster.cpp  RayCaster.h  Rendering.h  Room.h  RoundEntity.h  SaveAndLoadShips.cpp  (+29 more)
src/: CMakeLists.txt  Spaceships.cpp
src/LoadGame/: AutoSave.cpp  AutoSave.h  GameState.cpp  GameState.h  LoadSavedGame.cpp  LoadSavedGame.h
src/NewGame/: NewGame.cpp  NewGame.h
src/behavior/: Behavior.cpp  Behavior.h  BehavioredEntity.h  EntityAttributes.cpp  EntityAttributes.h  PlayerBehavior.cpp  PlayerBehavior.h
src/clay/: util.h
src/clay/renderers/: clay_renderer_SDL3.c  clay_renderer_SDL3.h
src/debug/: CollisionInfo.cpp  CollisionInfo.h  DebugButton.cpp  DebugButton.h  DebugGrid.cpp  DebugGrid.h  PointCastChecker.cpp  PointCastChecker.h  ProximityMapVisualizer.cpp  ProximityMapVisualizer.h
src/entities/: BoxEntity.h  CargoContainer.cpp  CargoContainer.h  CirclePhysicsEntity.cpp  CirclePhysicsEntity.h  Entity.cpp  Entity.h  Humanoid.cpp  Humanoid.h  RoundEntity.h  ShortLivedEntity.h  Sphere.cpp  Sphere.h
src/entities/entityId/: EntityId.cpp  EntityId.h  IIdentifiedEntity.h  IdentifiedEntity.h  IdentityId.cpp  IdentityId.h
src/entities/interactables/: Button.cpp  Button.h  IInteractable.cpp  IInteractable.h
src/entities/scripts/: ActiveWhenPausedEntity.cpp  ActiveWhenPausedEntity.h  Entity.cpp  Entity.h  LateUpdateEntity.cpp  LateUpdateEntity.h  ShortLivedEntity.h
src/entities/toggleableActivators/: Button.cpp  Button.h
src/entities/toggleables/: Lamp.cpp  Lamp.h
src/entityRendering/: RenderingInitialization.h
src/events/: Event.cpp  Event.h
src/game/: CameraTransformations.h  ElementContainer.h  Game.cpp  Game.h  PauseManager.cpp  PauseManager.h  Rendering.h  Update.h
src/gameEvent/: GameEvent.h  GetMousePositionType.cpp  GetMousePositionType.h  MousePositionType.h
src/imported/: json.hpp
src/instance/: Instance.cpp  Instance.h
src/instance/Rooms/: Room.h  SpaceshipRooms.cpp  SpaceshipRooms.h
src/loadGame/: AutoSave.cpp  AutoSave.h  GameState.cpp  GameState.h  LoadSavedGame.cpp
src/math/: AdjacencyListGraph.h  BoundingBox.h  Color.h  Hash.h  Matrix.h  Scaling.h  Vectors.h
src/newGame/: NewGame.cpp
src/parallax/: ParallaxObject.cpp  ParallaxObject.h
src/physics/: ConvexCast.cpp  ConvexCast.h  ConvexSegmentCast.cpp  ConvexSegmentCast.h  NormalsAtPoint.cpp  NormalsAtPoint.h  Physics.cpp  Physics.h  PhysicsEntity.cpp  PhysicsEntity.h  PhysicsShape.cpp  PhysicsShape.h  RayCaster.cpp  RayCaster.h  RectPhysicsEntity.cpp  RectPhysicsEntity.h  RectPhysicsShape.cpp  RectPhysicsShape.h  RoundPhysicsEntity.cpp  RoundPhysicsEntity.h  RoundPhysicsShape.cpp  RoundPhysicsShape.h  SegmentCast.cpp  SegmentCast.h  SegmentCircleCast.cpp  SegmentCircleCast.h
src/physics/PhysicsUpdateVisitor/: PhysicsCollisions.cpp  PhysicsCollisions.h  PhysicsUpdateAdapter.cpp  PhysicsUpdateAdapter.h  PhysicsUpdateVisitor.cpp  PhysicsUpdateVisitor.h  PhysicsUpdateVisitorConvex.h  PhysicsUpdateVisitorRect.h  PhysicsUpdateVisitorRound.h  PhysicsUpdateVisitorStaticConvex.h  PhysicsUpdateVisitorStaticRound.h  PhysicsUpdateVisitorWall.h
src/physics/PhysicsUtil/: BoundingBoxes.cpp  BoundingBoxes.h  PhysicsUtil.cpp  PhysicsUtil.h
src/physics/constraints/: RailConstraint.cpp  RailConstraint.h
src/physics/scripts/: PhysicsEntity.cpp  PhysicsEntity.h  ShortLivedPhysicsEntity.h
src/physics/shapes/: ConvexPhysicsShape.cpp  ConvexPhysicsShape.h  ConvexStaticPhysicsShape.cpp  ConvexStaticPhysicsShape.h  PhysicsShape.cpp  PhysicsShape.h  RectPhysicsShape.cpp  RectPhysicsShape.h  RectStaticPhysicsShape.h  RoundPhysicsShape.cpp  RoundPhysicsShape.h  RoundStaticPhysicsShape.cpp  RoundStaticPhysicsShape.h
src/player/: Camera.cpp  Camera.h  FreeCamera.cpp  FreeCamera.h  InteractableInteract.cpp  InteractableInteract.h  Player.h  PlayerVehicleTracker.cpp  PlayerVehicleTracker.h  VehicleEnter.cpp  VehicleEnter.h  VehicleLeave.cpp  VehicleLeave.h
src/rendering/util/: RenderTexture.cpp  RenderTexture.h
src/shipEditor/: BlueprintEditorAppearance.cpp  BlueprintEditorAppearance.h  BlueprintTilePainter.cpp  BlueprintTilePainter.h  HookPainter.cpp  HookPainter.h  ShipBuildingGrid.cpp  ShipBuildingGrid.h  ShipEditor.cpp  ShipEditor.h
src/shipEditor/AirlockPainter/: AirlockAppearance.cpp  AirlockAppearance.h  AirlockDeleter.cpp  AirlockDeleter.h  AirlockPainterManager.cpp  AirlockPainterManager.h  OrientationChanger.cpp  OrientationChanger.h
src/spaceships/: ConnectRoomGraph.h  Room.h  SaveAndLoadShips.cpp  SaveAndLoadShips.h  SpaceShip.cpp  SpaceShip.h  SpaceShipBlueprint.cpp  SpaceShipBlueprint.h  Tile.cpp  Tile.h  TileRendering.cpp  TileRendering.h
src/spaceships/Hooks/: HookPoint.cpp  (+5 more)
src/tarot/: TarotCard.cpp  TarotCard.h  TheStar.h
src/textures/: TextureSet.cpp  TextureSet.h  Textures.cpp  Textures.h  UsageMap.cpp  UsageMap.h
src/userInterface/: GUI.h  GUICheckbox.cpp  GUICheckbox.h  GUILabel.cpp  GUILabel.h  GUIList.cpp  GUIList.h  GUIRect.cpp  GUIRect.h  MainMenu.cpp  MainMenu.h  MenuNavigation.h  fonts.cpp  fonts.h
src/vehicles/: Vechicle.cpp  Vehicle.h
tests/: .gitignore  CMakeLists.txt  main.cpp
tests/LoadGame/: LoadGameTests.cpp
tests/contraptions/: FissionReactorTests.cpp
tests/game/: RenderingTests.cpp
tests/gameState/: GameStateTests.cpp  empty_test_ship.json  test_ship_1_humanoid.json  test_ship_1_lamp.json
tests/math/: VectorTests.cpp
tests/physics/: ConvexShapeTests.cpp  PhysicsCollisionTests.cpp  RectShapeTests.cpp  SegmentCastTests.cpp  SegmentCircleCast.cpp
tests/userInterface/: Vector2IntPromptTests.cpp
(+143 files in other folders)
